// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/extract .extractPackageFile() updates internal packages 1`] = `
Array [
  Object {
    "deps": Array [
      Object {
        "depName": "@org/a",
      },
      Object {
        "depName": "@org/b",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "foo",
      },
    ],
    "lernaDir": ".",
    "lernaPackages": Array [
      "packages/*",
    ],
    "packageFile": "package.json",
    "packages": Array [
      "packages/*",
    ],
  },
  Object {
    "deps": Array [
      Object {
        "depName": "@org/b",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "bar",
      },
    ],
    "lernaClient": undefined,
    "lernaDir": ".",
    "managerData": Object {
      "packageJsonName": "@org/a",
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "yarnLock": undefined,
  },
  Object {
    "lernaClient": undefined,
    "lernaDir": ".",
    "managerData": Object {
      "packageJsonName": "@org/b",
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "yarnLock": undefined,
  },
]
`;

exports[`manager/npm/extract .extractPackageFile() uses lerna package settings 1`] = `
Array [
  Object {
    "deps": Array [
      Object {
        "depName": "@org/a",
        "skipReason": "internal-package",
      },
      Object {
        "depName": "@org/b",
        "skipReason": "internal-package",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "foo",
      },
    ],
    "lernaDir": ".",
    "lernaPackages": Array [
      "packages/*",
    ],
    "packageFile": "package.json",
    "packages": Array [
      "packages/*",
    ],
  },
  Object {
    "deps": Array [
      Object {
        "depName": "@org/b",
        "skipReason": "internal-package",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "bar",
      },
    ],
    "lernaClient": undefined,
    "lernaDir": ".",
    "managerData": Object {
      "packageJsonName": "@org/a",
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "yarnLock": undefined,
  },
  Object {
    "lernaClient": undefined,
    "lernaDir": ".",
    "managerData": Object {
      "packageJsonName": "@org/b",
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "yarnLock": undefined,
  },
]
`;

exports[`manager/npm/extract .extractPackageFile() uses yarn workspaces package settings with lerna 1`] = `
Array [
  Object {
    "lernaClient": "yarn",
    "lernaDir": ".",
    "lernaPackages": Array [
      "oldpackages/*",
    ],
    "managerData": Object {
      "yarnWorkspacesPackages": Array [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
  },
  Object {
    "lernaClient": "yarn",
    "lernaDir": ".",
    "managerData": Object {
      "packageJsonName": "@org/a",
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "yarnLock": undefined,
  },
  Object {
    "lernaClient": "yarn",
    "lernaDir": ".",
    "managerData": Object {
      "packageJsonName": "@org/b",
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "yarnLock": undefined,
  },
]
`;

exports[`manager/npm/extract .extractPackageFile() uses yarn workspaces package settings without lerna 1`] = `
Array [
  Object {
    "managerData": Object {
      "yarnWorkspacesPackages": "packages/*",
    },
    "packageFile": "package.json",
  },
  Object {
    "lernaClient": undefined,
    "lernaDir": undefined,
    "managerData": Object {
      "hasYarnWorkspaces": true,
      "packageJsonName": "@org/a",
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "yarnLock": "yarn.lock",
  },
  Object {
    "lernaClient": undefined,
    "lernaDir": undefined,
    "managerData": Object {
      "packageJsonName": "@org/b",
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "yarnLock": undefined,
  },
]
`;
